[package]
name = "bsv-auth-actix-middleware"
version = "0.1.0"
edition = "2021"
rust-version = "1.87"
description = "BSV BRC-31 authentication middleware for Actix-web"
license-file = "LICENSE"
repository = "https://github.com/b1narydt/auth-actix-middleware"
homepage = "https://github.com/b1narydt/auth-actix-middleware"
readme = "README.md"
keywords = ["bsv", "authentication", "actix-web", "brc-31", "middleware"]
categories = ["web-programming::http-server", "authentication"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "bsv_auth_actix_middleware"

[dependencies]
bsv-sdk = { version = "0.1.3", features = ["network"] }
actix-web = "4"
actix-http = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
futures-util = "0.3"
thiserror = "2"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
base64 = "0.22"
hex = "0.4"
dashmap = "6"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
actix-rt = "2"
actix-test = "0.1"
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
